tests/instanceof/instanceof.exp
Error ------------------------------------------------------ instanceof.js:17:34

Cannot assign `'1337'` to `g.foo` because string is incompatible with number.


Error ------------------------------------------------------ instanceof.js:34:42

Cannot assign `'1337'` to `g.bar.foo` because string is incompatible with
number.


Error ------------------------------------------------------ instanceof.js:51:50

Cannot assign `'1337'` to `g.baz.bar.foo` because string is incompatible with
number.


Error ------------------------------------------------------- instanceof.js:83:5

Cannot perform arithmetic operation because array type is not a number.


Error ------------------------------------------------------- instanceof.js:85:7

Cannot assign `123` to `x[0]` because an indexer property is missing in number.



Found 5 errors
